--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "unity_id":"14851",
+    "unity_id":"5090191",
     "type":-1,
     "showAd":true,
-    "vungle_id":"5ae0db55e2d43668c97bd65e"
+    "vungle_id":"63a7ff1b9a2415749062eea6"
 }
